# Vorp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Windows Command Processor.lnk  build.bat
code/: build.bat
misc/: emacs.bat  shell.bat  startup.bat
